# fastrbo

./: Cargo.toml  LICENCE  README.md  pyproject.toml
src/: lib.rs  rbo.rs
