[package]
name = "fastrbo"
version = "0.1.0"
edition = "2018"
authors = ["Joeri van Strien"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastrbo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }